--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div id="H1S" class="container-fluid">
                 <h1> <b>Fuel Your Knowledge. <br> Own the Track!</b> </h1>
                 <p style="font-size: 20px;"> <b>Rev2Race</b> is your ultimate guide to the world of Formula 1. Whether you're a seasoned fan or just starting, explore the sport's history, race formats, iconic cars, famous tracks, and thrilling events. Dive into quick facts and stunning visuals to fuel your passion for racing!🏎️🏁</p>
-                <img src="Photos/CarModel.png"  alt="model" id="model">
+                <img src="Photos/carmodel 2.png"  alt="model" id="model">
                 </div>
             </div>
           </section>
